--- a/src/main/webapp/resources/css/admin/admin.css
+++ b/src/main/webapp/resources/css/admin/admin.css
@@ -21,9 +21,7 @@ p{
 /*네비*/
 .nav{
 	width: 5%;
-	
 	height: 100%;
-	/* border: 3px solid blue; */
 	overflow: hidden;
 	transition: .3s;
 	background: var(--mainColor);
@@ -51,30 +49,22 @@ p{
 	cursor: pointer;
 	transition: .3s;
 }
-
-.navIcon:hover{
-	color: var(--fontColor);
-}
-
 .navInnerBottom{
 	width: 100%;
-	height: 95%;
-	/* border: 3px solid red; */
+	height: 100%;
 	display: flex;
 	flex-direction: column;
 	align-items: center;
-	padding-top : 1rem;
 }
-
 .navInnerBottom a{
-	cursor: pointer;
 	transition: .3s;
-	margin-bottom: 0.5rem;
+	cursor: pointer;
+	margin-bottom: 1rem;
+	padding: 0 1rem;
 }
 
-.navInnerBottom a:hover{
-	color: var(--fontColor);
-}
+
+
 
 /*메인*/
 .main{
@@ -137,7 +127,7 @@ p{
 	align-items: center;
 	padding-left: 1rem;
 }
-.memberIdDiv a{
+.memberIdDiv span{
 	text-decoration: none;
 	transition: .3s;
 }
@@ -148,9 +138,7 @@ p{
 	transition: .3s;
 }
 
-.memberIdSpan:hover{
-	color: var(--fontColor);
-}
+
 /*메일*/
 .mailCon{
 	margin: 0 auto;
@@ -204,4 +192,27 @@ p{
 .canvasDiv{
 	display: flex;
 	
+}
+
+/* 스마트폰 */
+@media screen and (min-width:320px) and (max-width:767px) {
+
+}
+/* 태블릿 */
+@media screen and (min-width:768px) and (max-width:1023px) {
+
+}
+/* 데스크탑 */
+@media screen and (min-width:1024px) {
+	.navIcon:hover{
+		color: var(--fontColor);
+	}
+	.navInnerBottom a:hover{
+		background-color: var(--fontColor);
+	}
+
+
+	.memberIdSpan:hover{
+		color: var(--fontColor);
+	}
 }
