--- a/src/main/webapp/resources/css/shop/main/shop_admin.css
+++ b/src/main/webapp/resources/css/shop/main/shop_admin.css
@@ -1,35 +1,13 @@
 /*광고*/
-.carousel{
+.carousel {
+    margin: 0 auto;
     width: 100%;
     height: 800px;
     background-color: var(--mainColor);
     position: relative;
     overflow: hidden;
 }
-
-.carousel .carousel_button_L{
-    position: absolute;
-    top: 50%;
-    left: 20%;
-    transform: translateY(-50%);
-    cursor: pointer;
-    color: var(--fontColor);
-    font-size: 2rem;
-    z-index: 99;
-}
-
-.carousel .carousel_button_R{
-    position: absolute;
-    top: 50%;
-    right: 20%;
-    transform: translateY(-50%);
-    cursor: pointer;
-    color: var(--fontColor);
-    font-size: 2rem;
-    z-index: 99;
-}
-
-.carousel .adContainer{
+.adContainer {
     width: 600%;
     height: 100%;
     display: flex;
@@ -37,323 +15,279 @@
     position: absolute;
     top: 0;
     left: 0;
-    /* background-color: violet; */
 }
-.carousel .adContainer .adSubCon{
+.adSubCon {
     width: 100%;
     height: 100%;
     display: flex;
 }
-
-
 /*광고 이미지 구역*/
-.carousel .adContainer .adSubCon .carouselImgDiv{
+.carouselImgDiv {
     width: 100%;
     height: 100%;
-    /* border: 3px solid white; */
-    padding: 1rem;
 }
-
-.carousel .adContainer .adSubCon .carouselImgDiv img{
+.carouselImgDiv img {
     width: 100%;
     height: 100%;
     object-fit: fill;
 }
-/*광고 설명 구역 */
-.carousel .adContainer .adSubCon .carouselContentDiv{
-    width: 50%;
-    height: 100%;
-   /*  border: 3px solid cyan; */
-    padding: 1rem;
-    color: white;
-}
-
-
-
-
-
-
 /*-------------------------------------------------------------------------*/
-main{
+
+/*상품구역, 네비구역 컨테이너*/
+main {
     width: 100%;
     display: flex;
-    /* border: 3px solid crimson;  */
 }
-/*왼쪽 섹션*/
-main .section{
-    width: 81%;
+/*상품 구역*/
+.itemContainer {
+    width: 80%;
     background-color: var(--subColor);
-    /* border: 3px solid yellow; */
+}
+.itemBestDivCon{
+    width: 100%;
+
+
 }
 /*상품 탑 10 헤드 */
-main .section .section_best_header{
+.itemBestHeader {
     width: 100%;
     display: flex;
     align-items: center;
     justify-content: center;
     padding: 0.5rem;
-   /*  background-color: red; */
-    font-family: 'GimpoGothicBold00'; 
+    font-family: 'GimpoGothicBold00';
     font-size: 2rem;
-    /* border: 3px solid yellow; */
+
 }
-main .section .section_best_header h1{
+.itemBestHeader h1 {
+
+}
+.itemBestHeader h1 span {
     color: var(--fontColor);
 }
-main .section .section_best_header h1 span{
-    color: white;
-}
 /*상품 탑 10 내용*/
-main .section .section_best{
+.itemBestBody {
     width: 100%;
-    height: 435px;
-    position: relative;
+    height: 350px;
     overflow: hidden;
-    /* background-color: darkgoldenrod; */
+    position: relative;
 }
-
-/*이름 디비전*/
-.nameDiv{
-	/* border: 3px solid black; */
-	display: flex;
-	height: 20%;
-	padding: 0.5rem;
-	justify-content: center;
-}
-
-
-/*왼쪽 버튼*/
-.best_button_L{
-    cursor: pointer;
-    color: var(--mainColor);
-    font-size: 4rem;
+/*상품 컨트롤 아이콘*/
+.forwardSpan, .backSpan{
     position: absolute;
-    z-index: 1;
-    left: 10px;
     top: 50%;
     transform: translateY(-50%);
-    transition: .3s;
-}
-/*오른쪽 버튼*/
-.best_button_R{
+    color: var(--basicFontColor);
+    background-color: rgba(33, 33, 33, 0.8);
     cursor: pointer;
-    color: var(--mainColor);
-    font-size: 4rem;
-    position: absolute;
-    z-index: 1;
-    right: 10px;
-    top: 50%;
-    transform: translateY(-50%);
+    z-index: 600;
+    padding: 0.5rem;
+    border-radius: 20%;
     transition: .3s;
-    
-    
+}
+.forwardSpan{
+    right: 2rem;
+}
+.backSpan{
+    left: 2rem;
 }
 
-.best_button_L:hover{
-	color: var(--fontColor);
-} 
-.best_button_R:hover{
-	color: var(--fontColor);
-}
-
-/*탐 10 상품 디비전*/
-.section_best_items{
+/*탑 10 상품 디비전*/
+.itemBestDiv {
+    position: relative;
     width: 400%;
     height: 100%;
     display: flex;
-    justify-content: space-between;
-    align-items: center;
+    /*flex-wrap: wrap;*/
     color: var(--subFontColor);
-    position: absolute;
-    left: 0;
-    transition: .2s;
-    
-    
-    
 }
-.section_best_items a{
-	font-family: 'Black Han Sans'; 
-	color: white;
-	transition: .3s;
-	text-decoration: none;
-}
-.section_best_items a:hover{
-	color: red;
+.itemBestDiv a {
+    font-family: 'GimpoGothicBold00';
+    transition: .3s;
+    text-decoration: none;
 }
 /*탑 10 상품*/
-.section_item{
+.productBest {
     width: 20%;
-    height: 100%;
-    /* border: 3px solid dodgerblue; */
+    height: 350px;
     padding: 1rem;
     position: relative;
+    background-color: var(--sub2Color);
+    border: 3px solid var(--subColor);
+    transition: .3s;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    justify-content: space-between;
+    cursor: pointer;
+
 }
 
-/*순위 디비전*/
-.scoreDiv{
-	position: absolute;
-	width: 100px;
-	height: 200px;
-	bottom: -10%;
-	left: 0;
-	/* border: 3px solid blue; */
-	display: flex;
-	/* align-items: end; */
-}
+/*이름 디비전*/
+.nameDivBest {
+    display: flex;
+    height: 20%;
+    padding: 0.5rem;
+    justify-content: center;
+    align-items: center;
 
-/*순위 스팬*/
-.numberSpan1, .numberSpan2, .numberSpan3{
-	font-size: 9rem;
-	color: var(--fontColor);
-	font-family: 'Black Han Sans';
 }
-.numberSpan4, .numberSpan5, .numberSpan6, .numberSpan7, .numberSpan8, .numberSpan9, .numberSpan10{
-	font-size: 9rem;
-	color: rgba(209, 209, 209, 0.817);
-	font-family: 'Black Han Sans';
-}
-
-
-/*탑 10 상품 이미지*/
-/* main .section .section_best .section_best_items .section_item .section_item img{
+/*상품 썸네일 이미지 디비전 */
+.thumbnailDivBest {
     width: 100%;
-    height: 100%;
-    object-fit: fill;
-} */
-/*상품  헤더*/
-main .section .section_items_header{
+    max-width: 200px;
+    height: 80%;
+    max-height: 200px;
+    overflow: hidden;
+
+}
+/*순위 디비전*/
+.scoreDiv {
+    position: absolute;
+    width: 100px;
+    height: fit-content;
+    bottom: -10%;
+    left: 0;
+    display: flex;
+}
+/*순위 스팬*/
+.numberSpan1, .numberSpan2, .numberSpan3 {
+    font-size: 6rem;
+    color: rgb(69,175,227,0.82);
+    font-family: 'Black Han Sans';
+    transition: .3s;
+}
+.numberSpan4, .numberSpan5, .numberSpan6, .numberSpan7, .numberSpan8, .numberSpan9, .numberSpan10 {
+    font-size: 6rem;
+    color: rgba(209, 209, 209, 0.817);
+    font-family: 'Black Han Sans';
+    transition: .3s;
+}
+.itemAllDivCon{
+    width: 100%;
+}
+/*상품 헤더*/
+.itemAllHeader {
     width: 100%;
     display: flex;
     align-items: center;
     justify-content: center;
     padding: 0.5rem;
-    /* background-color: orangered; */
-    font-family: 'GimpoGothicBold00'; 
+    font-family: 'GimpoGothicBold00';
     font-size: 2rem;
-    /* border: 3px solid yellow; */
 }
-
-.section_items_header a{
-	
-	font-size: 3rem;
-	color: white;
-	text-decoration: none;
-	transition: .3s;
-}
-
-.section_items_header a:hover{
-	color: red;
-}
-
-main .section .section_items_header h1{
+.itemAllHeader h1 {
     color: var(--fontColor);
 }
-/*상품 컨테이너*/
-main .section .section_items_main{
+/*상품 내용*/
+.itemAllBody {
     width: 100%;
-    
-    
 }
-/*상품 더보기 클릭시 상품 그릴 디비전*/
-main .section .section_items_main .productDiv{
+/*상품 디비전*/
+.itemAllDiv {
     width: 100%;
     display: flex;
     flex-wrap: wrap;
     background-color: var(--subColor);
 }
-
 /*상품*/
-.section_items{
+.product {
     width: 20%;
-    height: 435px;
-    /* border: 3px solid green; */
+    height: 350px;
+    background-color: var(--sub2Color);
+    border: 3px solid var(--subColor);
     padding: 1rem;
     display: flex;
     align-items: center;
     flex-direction: column;
     justify-content: space-between;
-  
-}
+    transition: .3s;
+    cursor: pointer;
 
-.section_items a{
-	font-family: 'Black Han Sans'; 
-	color: white;
-	transition: .3s;
-	text-decoration: none;
 }
+/*상품 이름*/
+.product a {
+    font-family: 'GimpoGothicBold00';
+    transition: .3s;
+    text-decoration: none;
+}
+/*이름 디비전*/
+.nameDiv {
+    display: flex;
+    height: 10%;
+    padding: 0.5rem;
+    justify-content: center;
+    align-items: center;
 
-.section_items a:hover{
-	color: red;
 }
 /*상품 한정판, 삭제 상품 정보 디비전*/
 .productInfoDiv{
-	width: 100%;
-	/* border: 3px solid white; */
-	background-color: var(--mainColor);
-	display: flex;
-	align-items: center;
-	justify-content: space-around;
-	font-family: 'GimpoGothicBold00';
-	color: var(--fontColor);
+    width: 100%;
+    height: 10%;
+    background-color: var(--mainColor);
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    color: var(--fontColor);
 }
 
 /*상품 썸네일 이미지 디비전 */
-.thumbnailDiv{
-	width: 100%;
-	height: 80%;
-	/* border: 3px solid red; */
-	overflow: hidden;
+.thumbnailDiv {
+    width: 100%;
+    max-width: 200px;
+    height: 80%;
+    max-height: 200px;
+    overflow: hidden;
 }
 /*상품 썸네일 이미지 */
-.thumbnailImg{
-	width: 100%;
-	height: 100%;
-	object-fit: fill;
-	transition: .3s;
-}
-
-.thumbnailImg:hover{
-	transform: scale(1.2,1.2);
+.thumbnailImg {
+    width: 100%;
+    height: 100%;
+    object-fit: fill;
+    transition: .3s;
 }
 /*상품 더 불러오기 디비전*/
-.section_view_more{
+.viewMoreDiv {
     width: 100%;
     padding: 0.5rem;
     background-color: var(--subColor);
     display: flex;
     flex-direction: column;
     align-items: center;
-    text-align : center;
+    text-align: center;
+}
+.moreSpan {
+    cursor: pointer;
+    transition: .3s;
+    font-family: 'Black Han Sans';
+    font-size: 2rem;
 }
 
-.moreSpan{
-	cursor: pointer;
-	transition: .3s;
-	font-family: 'Black Han Sans';
-	font-size: 2rem;
-	color: white;
-}
-
-.moreSpan:hover{
-	color: red;
-}
-
-.section_view_more i{
+.viewMoreDiv i {
     font-size: 2rem;
     color: var(--fontColor);
     cursor: pointer;
 }
 /*사이드바 디비전*/
-main .side{
-    width: 19%;
-    background-color: rgb(59, 59, 59);
-    /* border: 3px solid purple; */
-    padding: 1rem;
+.side {
+    width: 20%;
     position: relative;
-    
+
+}
+/*알림 메시지*/
+.side p {
+    font-size: 0.8rem;
+}
+.closeSideSpan{
+    transition: .3s;
+    cursor: pointer;
+    position: absolute;
+    z-index: -1;
+    top: 2rem;
+    right: 2rem;
 }
 
-.side_navBar{
+.side_navBar {
     width: 100%;
     height: 800px;
     background-color: var(--mainColor);
@@ -362,83 +296,245 @@ main .side{
     position: sticky;
     top: 1rem;
     left: 0;
-    
 }
+
 /*등급 구역 */
-.gradeDiv{
-	height: 30%;
-	/* border: 3px solid white; */
-	border-bottom: 3px solid var(--borderColor);
-	padding: 1rem;
+.gradeDiv {
+    height: 20%;
+    max-width: 600px;
+    margin: 0 auto;
 }
 
-.gradeInnerTop{
-	height: 80%;
-	/* border: 3px solid red; */
-	color: white;
-	display: flex;
-	align-items: center;
-	justify-content: center;
-	font-family: 'GimpoGothicBold00';
+.gradeInnerTop {
+    height: 80%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
 }
 
-#userProfileImg{
-	width: 100%;
-	height: 100%;
-	border-radius: 40%;
+#userProfileImg {
+    width: 100%;
+    max-width: 200px;
+    height: 100%;
+    max-height: 200px;
+    border-radius: 40%;
 }
 
-.gradeInnerBottom{
-	height: 20%;
-	/* border: 3px solid yellow; */
-	color: white;
-	display: flex;
-	align-items: center;
-	justify-content: space-around;
-	font-family: 'GimpoGothicBold00';
+.gradeInnerBottom {
+    height: 20%;
+    border-top: 1px solid var(--borderColor);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 0.5rem;
 }
-
-.userGradeSpan{
-	font-size: 1.2rem;
+.gradeInnerBottom span{
+    margin-left: 0.3rem;
 }
-
-.gradeAnchor{
-	text-decoration: none;
-	color: var(--subFontColor);
-	transition: .3s;
-}
-
-.gradeAnchor:hover{
-	color: red;
+.userGradeSpan {
+    font-size: 1rem;
 }
 
 /*카테고리 구역 */
-.categoryDiv{
-	height: 70%;
-	/* border: 3px solid red; */
-	padding: 1rem;
-	display: flex;
-	flex-wrap: wrap;
-	color: white;
-	font-family: 'Black Han Sans'; 
-	
+.categoryDiv {
+    height: 80%;
+    display: flex;
 }
-
-.categoryInnerDiv{
-	width: 50%;
-	border: 3px solid white;
-	display: flex;
-    justify-content: center;
+/*정렬 메뉴*/
+.sortMenuDiv{
+    width: 50%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
     align-items: center;
+
 }
-/*카테고리 */
-.categorySpan{
-	cursor: pointer;
-	transition: .3s;
-	color: var(--subFontColor);
+.sortMenuSpanDiv{
+    width: 100%;
+    border: 3px solid var(--mainColor);
+    background-color: var(--sub2Color);
+    cursor: pointer;
+    display: flex;
+    justify-content: center;
+}
+.sortMenuSpan{
+    font-size: 1rem;
+    transition: .3s;
+    padding: 0.5rem 0;
+}
+/*소트 메뉴*/
+.sortInnerDiv {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+}
+/*정렬 세부 내용 */
+.categorySpan, .brandSpan {
+    display: inline-block;
+    width: 100%;
+    font-size: 0.8rem;
+    cursor: pointer;
+    transition: .3s;
+    color: var(--subFontColor);
+    padding: 0.2rem;
 }
 
-.categorySpan:hover{
-	color: red;
+
+/*태블릿, 스마트폰 용 카테고리 스팬*/
+.categorySpanAnchor{
+    display: none;
+    cursor: pointer;
+    transition: .3s;
+    position: absolute;
+    right: 1rem;
 }
+.moreIcon{
+    transition: .3s;
+
+}
+
+
+
+/* ------------------------------------------------------------------------------------------------------*/
+
+@media screen and (min-width:320px) and (max-width:767px) {
+    /* 스마트폰 */
+    body{
+        min-width: 320px;
+    }
+    /*광고*/
+    .carousel {
+        height: 300px;
+    }
+    /*상품구역*/
+    .itemContainer {
+        width: 100%;
+    }
+    /*탑 10 컨테이너*/
+    .itemBestBody{
+        height: 100px;
+    }
+    .itemBestDiv{
+        width: 2000%;
+        left: -500%;
+    }
+    /*탑 10 상품*/
+    .productBest{
+        width: 100%;
+        height: 100px;
+        display: flex;
+        flex-direction: row;
+    }
+    /*탑 10 이름*/
+    .nameDivBest{
+        width: 70%;
+        height: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+    .nameDivBest a{
+        font-size: 0.8rem;
+    }
+    /*탑 10 썸네일*/
+    .thumbnailDivBest{
+        width: 30%;
+        height: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+    .thumbnailDivBest img{
+        width: 50px;
+        height: 50px;
+    }
+
+    .scoreDiv span{
+        font-size: 3rem;
+    }
+    /*일반 상품*/
+    .product {
+        width: 100%;
+        height: 300px;
+    }
+    .categorySpanAnchor{
+        display: block;
+    }
+
+}
+
+@media screen and (min-width:768px) and (max-width:1023px) {
+    /* 타블렛 */
+
+    /*상품구역*/
+    .itemContainer {
+        width: 100%;
+    }
+    /*탑 10 컨테이너*/
+    .itemBestBody{
+        height: 200px;
+    }
+    .itemBestDiv{
+        width: 1000%;
+        left: -250%;
+    }
+    /*탑 10 상품*/
+    .productBest{
+        width: 50%;
+        height: 200px;
+        display: flex;
+    }
+    /*탑 10 이름*/
+    .nameDivBest{
+        width: 30%;
+        height: 100%;
+    }
+    /*탑 10 썸네일*/
+    .thumbnailDivBest{
+        width: 70%;
+        height: 100%;
+    }
+
+    /*일반 상품*/
+    .product {
+        width: 50%;
+        height: 300px;
+    }
+    .categorySpanAnchor{
+        display: block;
+    }
+
+
+}
+
+@media screen and (min-width:1024px) {
+    /* 데스크탑 */
+    .itemBestDiv{
+        left: -100%;
+    }
+    .forwardSpan:hover, .backSpan:hover{
+        transform: scale(1.1,1.1) translateY(-50%);
+        color: var(--hoverColor);
+    }
+    .moreSpan:hover {
+        color: var(--hoverColor);;
+    }
+    .closeSideSpan:hover{
+        color: var(--fontColor);
+        transform: scale(1.2,1.2);
+    }
+    .categorySpan:hover, .brandSpan:hover {
+        color: var(--hoverColor);
+        background-color: var(--fontColor);
+    }
+    .categorySpanAnchor:hover .moreIcon{
+        color: var(--fontColor);
+    }
+}
+
+
+
 
