--- a/src/main/webapp/resources/css/shop/main/shop_user.css
+++ b/src/main/webapp/resources/css/shop/main/shop_user.css
@@ -68,14 +68,37 @@ main {
 /*상품 탑 10 내용*/
 .itemBestBody {
     width: 100%;
-    height: auto;
+    height: 350px;
+    overflow: hidden;
+    position: relative;
 }
+/*상품 컨트롤 아이콘*/
+.forwardSpan, .backSpan{
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    color: var(--basicFontColor);
+    background-color: rgba(33, 33, 33, 0.8);
+    cursor: pointer;
+    z-index: 600;
+    padding: 0.5rem;
+    border-radius: 20%;
+    transition: .3s;
+}
+.forwardSpan{
+    right: 2rem;
+}
+.backSpan{
+    left: 2rem;
+}
+
 /*탑 10 상품 디비전*/
 .itemBestDiv {
-    width: 100%;
+    position: relative;
+    width: 400%;
     height: 100%;
     display: flex;
-    flex-wrap: wrap;
+    /*flex-wrap: wrap;*/
     color: var(--subFontColor);
 }
 .itemBestDiv a {
@@ -97,6 +120,7 @@ main {
     flex-direction: column;
     justify-content: space-between;
     cursor: pointer;
+
 }
 
 /*이름 디비전*/
@@ -131,11 +155,13 @@ main {
     font-size: 6rem;
     color: rgb(69,175,227,0.82);
     font-family: 'Black Han Sans';
+    transition: .3s;
 }
 .numberSpan4, .numberSpan5, .numberSpan6, .numberSpan7, .numberSpan8, .numberSpan9, .numberSpan10 {
     font-size: 6rem;
     color: rgba(209, 209, 209, 0.817);
     font-family: 'Black Han Sans';
+    transition: .3s;
 }
 .itemAllDivCon{
     width: 100%;
@@ -225,9 +251,7 @@ main {
     font-family: 'Black Han Sans';
     font-size: 2rem;
 }
-.moreSpan:hover {
-    color: var(--hoverColor);;
-}
+
 .viewMoreDiv i {
     font-size: 2rem;
     color: var(--fontColor);
@@ -251,10 +275,7 @@ main {
     top: 2rem;
     right: 2rem;
 }
-.closeSideSpan:hover{
-    color: var(--fontColor);
-    transform: scale(1.2,1.2);
-}
+
 .side_navBar {
     width: 100%;
     height: 800px;
@@ -268,7 +289,7 @@ main {
 
 /*등급 구역 */
 .gradeDiv {
-    height: 30%;
+    height: 20%;
     max-width: 600px;
     margin: 0 auto;
 }
@@ -306,7 +327,7 @@ main {
 
 /*카테고리 구역 */
 .categoryDiv {
-    height: 70%;
+    height: 80%;
     display: flex;
 }
 /*정렬 메뉴*/
@@ -316,6 +337,7 @@ main {
     display: flex;
     flex-direction: column;
     align-items: center;
+
 }
 .sortMenuSpanDiv{
     width: 100%;
@@ -336,19 +358,19 @@ main {
     display: flex;
     flex-direction: column;
     align-items: center;
+
 }
-/*카테고리 */
+/*정렬 세부 내용 */
 .categorySpan, .brandSpan {
+    display: inline-block;
+    width: 100%;
     font-size: 0.8rem;
     cursor: pointer;
     transition: .3s;
     color: var(--subFontColor);
-
     padding: 0.2rem;
 }
-.categorySpan:hover, .brandSpan:hover {
-    color: var(--fontColor);;
-}
+
 
 /*태블릿, 스마트폰 용 카테고리 스팬*/
 .categorySpanAnchor{
@@ -362,9 +384,7 @@ main {
     transition: .3s;
 
 }
-.categorySpanAnchor:hover .moreIcon{
-    color: var(--fontColor);
-}
+
 
 
 /* ------------------------------------------------------------------------------------------------------*/
@@ -382,12 +402,13 @@ main {
     .itemContainer {
         width: 100%;
     }
-
-    .closeSideSpan{
-
+    /*탑 10 컨테이너*/
+    .itemBestBody{
+        height: 100px;
     }
-    .side_navBar{
-        position: static;
+    .itemBestDiv{
+        width: 2000%;
+        left: -500%;
     }
     /*탑 10 상품*/
     .productBest{
@@ -395,7 +416,6 @@ main {
         height: 100px;
         display: flex;
         flex-direction: row;
-
     }
     /*탑 10 이름*/
     .nameDivBest{
@@ -432,6 +452,7 @@ main {
     .categorySpanAnchor{
         display: block;
     }
+
 }
 
 @media screen and (min-width:768px) and (max-width:1023px) {
@@ -441,12 +462,13 @@ main {
     .itemContainer {
         width: 100%;
     }
-
-    .closeSideSpan{
-
+    /*탑 10 컨테이너*/
+    .itemBestBody{
+        height: 200px;
     }
-    .side_navBar{
-        position: static;
+    .itemBestDiv{
+        width: 1000%;
+        left: -250%;
     }
     /*탑 10 상품*/
     .productBest{
@@ -474,8 +496,31 @@ main {
         display: block;
     }
 
+
 }
 
 @media screen and (min-width:1024px) {
     /* 데스크탑 */
+    .itemBestDiv{
+        left: -100%;
+    }
+    .forwardSpan:hover, .backSpan:hover{
+        transform: scale(1.1,1.1) translateY(-50%);
+        color: var(--hoverColor);
+    }
+    .moreSpan:hover {
+        color: var(--hoverColor);;
+    }
+    .closeSideSpan:hover{
+        color: var(--fontColor);
+        transform: scale(1.2,1.2);
+    }
+    .categorySpan:hover, .brandSpan:hover {
+        color: var(--hoverColor);
+        background-color: var(--fontColor);
+    }
+    .categorySpanAnchor:hover .moreIcon{
+        color: var(--fontColor);
+    }
+
 }
