--- a/src/main/webapp/resources/css/shop/product/product_detail_admin.css
+++ b/src/main/webapp/resources/css/shop/product/product_detail_admin.css
@@ -449,7 +449,7 @@ main .productBottom{
     transition: .3s;
 }
 
-.toReveiwCon{
+.toReviewCon{
     width: 100%;
     height: 20%;
     border:1px solid white;
