--- a/src/main/webapp/resources/css/shop/product/product_detail_user.css
+++ b/src/main/webapp/resources/css/shop/product/product_detail_user.css
@@ -6,42 +6,40 @@ main{
 }
 
 /*상단*/
-main .productTop{
+.productTop{
     width: 100%;
     height: 100vh;
     display: flex;
-    /* border: 1px solid orangered; */
+
 }
 
 /*상단 왼쪽 상품 이미지 구역*/
-main .productTop .topLeft{
+.topLeft{
     width: 50%;
     height: 100%;
-    /* border: 1px solid orangered; */
+
 }
 /*메인 이미지*/
-main .productTop .topLeft .mainImgDiv{
+.mainImgDiv{
     width: 100%;
     height: 80%;
-    /* border: 1px solid orangered; */
     padding: 1rem;
 }
-main .productTop .topLeft .mainImgDiv .productMainImg{
+.productMainImg{
     width: 100%;
     height: 100%;
     object-fit: fill;
-    /* border: 1px solid black; */
+
 }
 
 /*서브이미지*/
-main .productTop .topLeft .subImgDiv{
+.subImgDiv{
     width: 100%;
     height: 20%;
-    /* border: 1px solid black; */
     display: flex;
     padding: 1rem;
 }
-main .productTop .topLeft .subImgDiv .productSubImg{
+.productSubImg{
     width: 20%;
     height: 100%;
     object-fit: fill;
@@ -49,8 +47,7 @@ main .productTop .topLeft .subImgDiv .productSubImg{
 }
 
 .subImgDiv img{
-	/* border: 1px solid black; */
-	transition: .3s;
+    transition: .3s;
 }
 
 .subImgDiv img:hover{
@@ -58,52 +55,44 @@ main .productTop .topLeft .subImgDiv .productSubImg{
 }
 
 /*상단 오른쪽*/
-main .productTop .topRight{
+.topRight{
     width: 50%;
     height: 100%;
-    /* border: 1px solid yellow; */
+
 }
 /*상단 오른쪽 상품 설명 구역*/
-main .productTop .topRight .descriptionDiv{
+.descriptionDiv{
     width: 100%;
     height: 70%;
-    /* border: 1px solid saddlebrown; */
     padding: 1rem;
-   /*  font-family: 'GimpoGothicRegular00'; */
-    font-family: 'GimpoGothicBold00';
 }
-main .productTop .topRight .descriptionDiv .descriptionTable{
+.descriptionTable{
     width: 100%;
     height: 100%;
-    
     color: white;
 }
-.descriptionTable tr{
-    /* border: 1px solid var(--borderColor); */
-}
+
 .descriptionTable td{
     padding: 1rem;
 }
 /*상단 오른쪽 수량 선택 구역*/
-main .productTop .topRight .quantityDiv{
+.quantityDiv{
     width: 100%;
     height: 15%;
-    /* border: 1px solid blanchedalmond; */
     display: flex;
 }
-main .productTop .topRight .quantityDiv .quantityLeft{
+.quantityLeft{
     width: 50%;
     height: 100%;
-    /* border: 1px solid blanchedalmond; */
+
     display: flex;
     align-items: center;
     justify-content: center;
     /* padding: 1rem; */
 }
-main .productTop .topRight .quantityDiv .quantityLeft .quantityCon{
+.quantityCon{
     width: 40%;
     height: 70%;
-    /* border: 3px solid seagreen; */
     display: flex;
 }
 .quantityConLeft{
@@ -117,13 +106,11 @@ main .productTop .topRight .quantityDiv .quantityLeft .quantityCon{
     font-size: 2rem;
     background-color: var(--mainColor);
     color: var(--subFontColor);
-    font-family: 'GimpoGothicBold00';
     border: none;
     user-select: none;
 }
 #productPriceSpan{
-	font-family: 'GimpoGothicBold00';
-	font-size: 2rem;
+    font-size: 2rem;
 }
 .quantityConRight{
     width: 30%;
@@ -137,7 +124,6 @@ main .productTop .topRight .quantityDiv .quantityLeft .quantityCon{
     height: 50%;
     color: white;
     background-color: var(--sub2Color);
-    font-family: 'GimpoGothicBold00';
     transition: .3s;
     cursor: pointer;
     border: none;
@@ -149,18 +135,16 @@ main .productTop .topRight .quantityDiv .quantityLeft .quantityCon{
 main .productTop .topRight .quantityDiv .quantityRight{
     width: 50%;
     height: 100%;
-    /* border: 1px solid greenyellow; */
     display: flex;
     justify-content: center;
     align-items: center;
     color: white;
-    /* padding: 1rem; */
+
 }
 /*상단 오른쪽 버튼 구역*/
 main .productTop .topRight .btnDiv{
     width: 100%;
     height: 15%;
-    /* border: 1px solid cornflowerblue; */
     display: flex;
     align-items: center;
     justify-content: space-around;
@@ -177,7 +161,6 @@ main .productTop .topRight .btnDiv .productBtn{
 /*중단*/
 main .productMiddle{
     width: 100%;
-    /* border: 1px solid blue; */
     position: relative;
 }
 
@@ -194,7 +177,6 @@ main .productMiddle{
 
 .mainImgs{
     width: 800px;
-    /* border: 5px solid crimson; */
     object-fit: fill;
 }
 
@@ -229,14 +211,12 @@ main .productBottom{
     display: flex;
     flex-direction: column;
     align-items: center;
-    /* border: 1px solid white; */
     background-color: var(--subColor);
 }
 
 .productBottom .reviewTop{
     width: 80%;
     height: 1400px;
-    /* border: 3px solid aquamarine; */
 }
 
 .reviewTop h3{  
@@ -271,7 +251,6 @@ main .productBottom{
 .reviewGrade{
     width: 50%;
     height: 100%;
-    /* border: 3px solid black; */
     padding: 1rem;
     display: flex;
     flex-direction: column;
@@ -282,7 +261,6 @@ main .productBottom{
 .reviewGraph{
     width: 50%;
     height: 100%;
-    /* border: 3px solid white; */
     padding: 1rem;
     display: flex;
     flex-direction: column;
@@ -292,14 +270,13 @@ main .productBottom{
 
 .reviewBottom{
     width: 80%;
-    /* border: 3px solid salmon; */
     padding: 1rem;
 }
 
 .reviewBottom p{
 	font-size: 1.5rem;
 	color: white;
-	font-family: 'GimpoGothicBold00';
+
 }
 /*리뷰들 반복*/
 .reviews{
@@ -316,8 +293,7 @@ main .productBottom{
 }
 /*리뷰 안 공통*/
 .reviewsDiv{
-	/* border: 3px solid white; */
-	padding: 1rem;
+    padding: 1rem;
 }
 
 .reviewsHeader, .reviewsGrade{
@@ -341,8 +317,7 @@ main .productBottom{
 }
 
 .reviewsGradeInner{
-	/* border: 3px solid blue; */
-	width: 50%;
+    width: 50%;
 	height: 100%;
 }
 
@@ -388,8 +363,7 @@ main .productBottom{
 }
 
 .reviewsPhotoInner{
-	/* border: 3px solid red; */
-	width: 50%;
+    width: 50%;
 	height: 100%;
 	display: flex;
     justify-content: center;
@@ -401,13 +375,6 @@ main .productBottom{
 	width: 100%;
 	height: 100%;
 }
-/*리뷰 비디오 커버 디비전*/
-.reviewsPhotoInnerVideo{
-	/* display: flex;
-	flex-direction: column;
-	align-items: center;
-	justify-content: center; */
-}
 
 .veiwMoreRewviesDiv{
 	font-family: 'Black Han Sans';
@@ -416,14 +383,12 @@ main .productBottom{
     width: 200px;
     height: 30px;
     margin: 0 auto;
-    
     cursor: pointer;
     transition: .3s;
     display: flex;
     justify-content: center;
     align-items: center;
 }
-
 .veiwMoreRewviesDiv:hover{
 	color: red;
 }
@@ -441,7 +406,6 @@ main .productBottom{
     pointer-events: none;
     opacity: 0;
     transition: .5s;
-    
 }
 
 .navigatorContainer div:hover{
@@ -459,7 +423,7 @@ main .productBottom{
     transition: .3s;
 }
 
-.toReveiwCon{
+.toReviewCon{
     width: 100%;
     height: 20%;
     border:1px solid white;
@@ -500,19 +464,14 @@ main .productBottom{
 	height: 100%;
 	top: 0;
 	left: 0;
-	
-	background-color: rgba(0, 0, 0, 0.339);
+    background-color: rgba(0, 0, 0, 0.339);
     backdrop-filter: blur(4px);
-    
-    
-    
 }
 
 .youtubeInnerDiv{
 	width: 1280px;
 	height: 720px;
-	/* border: 3px solid blue; */
-	position: relative;
+    position: relative;
 	top: 50%;
 	left: 50%;
 	transform: translate(-50%,-50%);
@@ -520,14 +479,10 @@ main .productBottom{
 	justify-content: center;
 	align-items: center;
 	color: white;
-	font-family: 'GimpoGothicBold00';
 }
-
 .helpfulAni{
 	animation: aniThumb 0.5s 1 linear alternate;
 }
-
-
 .youtubeInnerTop{
 	border: 3px solid white;
 	display: flex;
@@ -545,6 +500,6 @@ main .productBottom{
 		transform: rotateZ(15deg);
 	}
 	99%{
-		transform: retateZ(0);
+		transform: rotateZ(0deg);
 	}
 }
