--- a/src/main/webapp/resources/css/admin/admin.css
+++ b/src/main/webapp/resources/css/admin/admin.css
@@ -1,33 +1,22 @@
 @charset "UTF-8";
-
-html, body{
-	width: 100%;
-	height: 100%;
-}
-
-p{
-	margin: 1rem;
-}
-
 /*컨테이너*/
 .container{
 	width: 100%;
-	min-width: 1500px;
-	height: 100%;
-	min-height: 1000px;
-	/* border: 3px solid red; */
+	min-height: 100vh;
 	display: flex;
+	position: relative;
 }
 /*네비*/
 .nav{
-	width: 5%;
+	position: absolute;
+	top: 0;
+	left: 0;
+	z-index: 1;
+	width: 200px;
 	height: 100%;
 	overflow: hidden;
 	transition: .3s;
 	background: var(--mainColor);
-	color: white;
-	font-family: 'GimpoGothicBold00';
-	
 	display: flex;
 	flex-direction: column;
 	align-items: center;
@@ -40,111 +29,115 @@ p{
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
-	align-items: center;
-	/* border: 3px solid white; */
 }
-
+/*네비 메뉴 아이콘*/
+.menuIcons{
+	padding: 0 1rem;
+}
+/*네비바 아이콘*/
 .navIcon{
+	position: absolute;
 	color: var(--subFontColor);
 	cursor: pointer;
 	transition: .3s;
+
 }
 .navInnerBottom{
 	width: 100%;
 	height: 100%;
 	display: flex;
 	flex-direction: column;
-	align-items: center;
+
 }
+/*메뉴 아이콘*/
 .navInnerBottom a{
+	display: inline-block;
+	display: flex;
+	align-items: center;
 	transition: .3s;
 	cursor: pointer;
 	margin-bottom: 1rem;
-	padding: 0 1rem;
-}
 
+}
+/*메뉴 아이콘 텍스트*/
+.textSpan{
+	transition: .3s;
+	margin-left: 1rem;
+	opacity: 0;
+}
 
 
 
 /*메인*/
 .main{
-	width: 95%;
+	position: absolute;
+	top: 0;
+	right: 0;
+	z-index: 2;
+	width: calc(100% - 60px);
 	height: 100%;
-	/* border: 3px solid green; */
 	transition: .3s;
-	padding: 1rem;
-	font-family: 'GimpoGothicBold00';
-	color: white;
 	background-color: var(--subColor);
-	
 }
 /*메인 제목*/
 .mainTop{
 	width: 100%;
-	min-width: 1000px;
 	height: 10%;
 	display: flex;
 	align-items: center;
-	/* border: 3px solid black; */
 	padding-left: 1rem;
+}
+.mainTop h1{
+	font-size: 2rem;
 }
 /*메인 내용*/
 .mainBottom{
 	width: 100%;
-	min-width: 1000px;
 	height: 90%;
-	/* border: 3px solid yellow; */
-	padding: 1rem;
 	overflow-y: scroll;
 	background-color: var(--sub2Color);
-	
 }
-
 /*회원*/
 .memberDiv{
 	width: 100%;
 	height: 100px;
-	/* border: 3px solid red; */
 	display: flex;
+	border: 2px solid var(--sub2Color);
+	background-color: #1c1e1e;
+	cursor: pointer;
+	transition: .2s;
 }
 .memberImgDiv{
 	width: 100px;
 	height: 100%;
-	/* border: 3px solid white; */
-	border-bottom: 3px solid var(--borderColor);
+	display: flex;
+	align-items: center;
+	justify-content: center;
 }
 .memberImg{
-	width: 100%;
-	height: 100%;
+	width: 50px;
+	height: 50px;
 	border-radius: 40%;
 }
 .memberIdDiv{
 	width: 70%;
 	height: 100%;
-	/* border: 3px solid blue; */
-	border-bottom: 3px solid var(--borderColor);
+
 	display: flex;
 	align-items: center;
-	padding-left: 1rem;
+	padding-left: 0.5rem;
 }
-.memberIdDiv span{
-	text-decoration: none;
-	transition: .3s;
-}
-
 .memberIdSpan{
 	color: var(--subFontColor);
-	font-size: 1.5rem;
 	transition: .3s;
 }
-
-
 /*메일*/
 .mailCon{
-	margin: 0 auto;
-	width: 500px;
+	margin: 10px auto;
+	width: 100%;
+	max-width: 500px;
 	height: 700px;
-	border: 3px solid white;
+	border: 3px solid var(--borderColor);
 	display: flex;
 	flex-direction: column;
 	align-items: center;
@@ -155,8 +148,8 @@ p{
 #mailTextArea{
 	margin: 0.5rem auto;
     width: 100%;
-    height: 100%;
-    padding: 0.5rem;
+	height: 100%;
+	padding: 0.5rem;
 	background-color: var(--sub2Color);
 	color: white;
 	font-family: 'GimpoGothicBold00';
@@ -164,43 +157,86 @@ p{
 	border: none;
 	outline: none;
 	resize: none;
+	border-bottom: 3px solid var(--mainColor);
 }
 
 #mailTextArea:focus{
 	background-color: var(--mainColor);
 }
-
+/*모니터 정보*/
 .monitorContainer{
 	display: flex;
 	align-items: center;
 	justify-content: center;
 	flex-wrap : wrap;
-	/* border: 3px solid white; */
 	width: 100%;
-	height: 100%;
+	height: fit-content;
 }
-
 .monitorSubDiv{
-	width: 45%;
-	height: 45%;
-	/* border: 3px solid red; */
-	margin: 1rem;
+	width: 50%;
+	height: 50%;
 	padding: 1rem;
-	
-}
-
-.canvasDiv{
+	border: 2px solid var(--subColor);
 	display: flex;
-	
+	flex-direction: column;
+}
+.monitorTextDiv{
+	width: 100%;
+
+}
+.monitorTextDiv p{
+	margin: 0.5rem;
+}
+.canvasDiv{
+	width: 100%;
+	height: fit-content;
+	display: flex;
+	align-items: center;
+	justify-content: space-around;
+
+}
+.canvasWrapDiv{
+	width: 50%;
+	height: 50%;
+	min-height: 400px;
+
+	position: relative;
 }
 
 /* 스마트폰 */
 @media screen and (min-width:320px) and (max-width:767px) {
-
+	.mainTop h1{
+		font-size: 1rem;
+	}
+	.memberIdSpan{
+		font-size: 0.5rem;
+	}
+	.mailCon{
+		padding: 0;
+	}
+	.monitorSubDiv{
+		width: 100%;
+		padding: 0.2rem;
+	}
+	.canvasDiv{
+		flex-direction: column;
+	}
+	.canvasWrapDiv{
+		width: 100%;
+	}
 }
 /* 태블릿 */
 @media screen and (min-width:768px) and (max-width:1023px) {
-
+	.mainTop h1{
+		font-size: 1.5rem;
+	}
+	.memberIdSpan{
+		font-size: 0.8rem;
+	}
+	.monitorSubDiv{
+		width: 100%;
+		padding: 0.5rem;
+	}
 }
 /* 데스크탑 */
 @media screen and (min-width:1024px) {
@@ -210,9 +246,8 @@ p{
 	.navInnerBottom a:hover{
 		background-color: var(--fontColor);
 	}
-
-
 	.memberIdSpan:hover{
 		color: var(--fontColor);
 	}
+
 }
