--- a/src/main/webapp/resources/css/global.css
+++ b/src/main/webapp/resources/css/global.css
@@ -47,7 +47,6 @@ a:visited{
 
 .EmphasisSpan{
 	color: var(--fontColor);
-	
 }
 
 /*버튼 */
@@ -60,18 +59,16 @@ a:visited{
 	cursor: pointer;
 	font-family: 'GimpoGothicBold00';
 	font-size: 1.1rem;
-	/* margin-bottom: 0.5rem; */
 	border: none;
 }
 
-.formBtns:hover {
-	background-color: var(--mainColor);
-	
-}
+
 
 /*폼 텍스트 인풋 공통 */
 .formInputs {
-	width: 300px;
+	width: 100%;
+	max-width: 300px;
+	min-width: 50px;
 	height: 50px;
 	padding-left: 0.5rem;
 	background-color: var(--sub2Color);
@@ -96,6 +93,21 @@ a:visited{
 /*숨기기 */
 .noneClass{
 	display: none;
+}
+
+/* 스마트폰 */
+@media screen and (min-width:320px) and (max-width:767px) {
+
+}
+/* 태블릿 */
+@media screen and (min-width:768px) and (max-width:1023px) {
+
+}
+/* 데스크탑 */
+@media screen and (min-width:1024px) {
+	.formBtns:hover {
+		background-color: var(--mainColor);
+	}
 }
 
 
