--- a/src/main/webapp/resources/css/home.css
+++ b/src/main/webapp/resources/css/home.css
@@ -1,17 +1,7 @@
 @charset "UTF-8";
-
-html, body{
-	height: 100%;
-}
-
-a{
-	transition: .3s;
-	cursor: pointer;
-}
 /*홈 컨테이너*/
 .homeContainer{
-	height: 100%;
-	font-family: 'Black Han Sans';
+	height: 100vh;
 	background-color: var(--mainColor);
 }
 /*상단*/
@@ -29,7 +19,6 @@ a{
 	align-items: center;
     
 }
-
 .loginNameSpan{
 	color: var(--fontColor);
 	font-size: 1.5rem;
@@ -42,6 +31,18 @@ a{
 	align-items: center;
     justify-content: space-around;
 }
+.menuDiv a{
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	cursor: pointer;
+	transition: .3s;
+	font-family: 'Black Han Sans';
+}
+.menuDiv span{
+	transition: .3s;
+}
 /*메인*/
 .homeMain{
 	height: 90%;
@@ -50,15 +51,16 @@ a{
 	
 }
 
-h1{
+.homeMain h1{
 	position: absolute;
 	top: 50%;
 	left: 50%;
 	transform: translate(-50%,-50%);
 	z-index: 99;
 	transition: .3s;
+	font-family: "Black Han Sans";
 }
-img{
+.homeMain img{
 	width: 100%;
 	height: 100%;
 	object-fit : fill;
@@ -124,7 +126,7 @@ img{
 }
 /* 데스크탑 */
 @media screen and (min-width:1024px) {
-	a:hover{
+	a:hover .material-symbols-outlined, a:hover .headerAnchorTextSpan{
 		color: var(--hoverColor);;
 		transform: translateY(-10%);
 	}
