--- a/src/main/webapp/resources/css/shop/shop_global.css
+++ b/src/main/webapp/resources/css/shop/shop_global.css
@@ -16,10 +16,7 @@ header a{
 	transition: .3s;
 }
 
-#loginName:hover{
-	color: var(--hoverColor);;
-	transform: translateY(-10%);
-}
+
 header .logo{
     width: 30%;
     height: 100%;
@@ -55,8 +52,19 @@ header .login{
 }
 header .login a{
     transition: .3s;
+    cursor: pointer;
 }
-
+/*메뉴 스팬들*/
+#basket, #loginBtn, #joinBtn, #logOutBtn{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+/*메뉴 아이콘 설명 택스트*/
+.headerAnchorTextSpan{
+    font-size: 0.8rem;
+}
 
 footer{
     width: 100%;
@@ -113,13 +121,10 @@ footer{
     z-index: 999;
 
 }
+
 /* 스마트폰 */
 @media screen and (min-width:320px) and (max-width:767px) {
-    header{
-        position: fixed;
-        top: 0;
-        z-index: 998;
-    }
+
     /*로고*/
     .logo h1{
         font-size: 0.8rem;
@@ -142,15 +147,14 @@ footer{
     .footer_content p{
         font-size: 0.5rem;
     }
+    .loginUserIdSpan{
+        display: none;
+    }
 
 }
 /* 타블렛 */
 @media screen and (min-width:768px) and (max-width:1023px) {
-    header{
-        position: fixed;
-        top: 0;
-        z-index: 998;
-    }
+
     /*로고*/
     .logo h1{
         font-size: 1rem;
@@ -166,6 +170,9 @@ footer{
     .footer_logo h1{
         font-size: 1rem;
     }
+    .loginUserIdSpan{
+        display: none;
+    }
 
 }
 /* 데스크탑 */
@@ -174,27 +181,20 @@ footer{
     .login a{
         font-size: 1rem;
         margin-left: 1rem;
-
     }
     #loginName{
         display: flex;
         align-items: center;
     }
-    #logOutBtn:hover{
-        color: var(--hoverColor);;
-    }
-    header a:hover{
-        color: var(--hoverColor);;
-        transform: translateY(-10%);
-    }
-    #basket:hover .basketSpan{
+    header a:hover, header .logo h1:hover, .footer_logo h1:hover{
         color: var(--fontColor);
-    }
-    header .logo h1:hover{
         transform: translateY(-10%);
     }
-    .footer_logo h1:hover{
-        transform: translateY(-10%);
+    #loginName:hover .loginUserIdSpan{
+        color: var(--fontColor);;
+    }
+    header a:hover .material-symbols-outlined, header a:hover .headerAnchorTextSpan{
+        color: var(--fontColor);
     }
 }
 
