--- a/src/main/webapp/resources/css/common/login.css
+++ b/src/main/webapp/resources/css/common/login.css
@@ -24,11 +24,32 @@
 .pwDiv {
 	height: 100%;
 	min-height: 100px;
-	/* border: 3px solid dodgerblue; */
 	padding: 1rem;
 	display: flex;
 	justify-content: center;
 	align-items: center;
+}
+.placeholderDiv{
+	width: 100%;
+	max-width: 300px;
+	min-width: 50px;
+	position: relative;
+}
+.placeholderSpan{
+	transition: .3s ease;
+	position: absolute;
+	top: 50%;
+	left: 10px;
+	transform: translateY(-50%);
+	color: var(--subFontColor);
+
+
+}
+.formInputs:focus ~ .placeholderSpan{
+	top: 0;
+	transform: translateY(-50%) scale(0.8,0.8);
+	color: var(--fontColor);
+
 }
 /*버튼 구역 */
 .btnDiv {
@@ -63,7 +84,7 @@
 	align-items: center;
 }
 /* 스마트폰 */
-@media screen and (min-width:320px) and (max-width:767px) {
+@media screen and (min-width:1px) and (max-width:767px) {
 	.loginContainer{
 		width: 320px;
 		margin: 0 auto;
@@ -77,6 +98,7 @@
 	.btnDivLeft, .btnDivRight{
 		width: 100%;
 		padding: 0;
+		margin-bottom: 0.5rem;
 	}
 }
 /* 태블릿 */
