--- a/src/main/webapp/resources/css/shop/main/popup.css
+++ b/src/main/webapp/resources/css/shop/main/popup.css
@@ -62,12 +62,14 @@
 	height: 100%;
 }
 
-
-
 .btnDiv{
 	height: 20%;
 	display: flex;
     align-items: center;
     justify-content: space-around;
+}
+.todayExit, .justExit{
+	font-size: 0.8rem;
+	width: 120px;
 }
 
