--- a/src/main/webapp/resources/css/admin/detail.css
+++ b/src/main/webapp/resources/css/admin/detail.css
@@ -40,8 +40,6 @@ p{
 	justify-content: center;
 }
 .profileImg{
-	/* width: 80%;
-	height: 80%; */
 	width: 300px;
 	height: 300px;
 	border-radius: 40%;
@@ -79,13 +77,13 @@ p{
 	/* border: 3px solid red; */
 	padding: 1rem;
 	display: flex;
+	flex-wrap: wrap;
 }
 .bottomLeft{
 	width: 20%;
 	height: 100%;
 	
 	padding: 1rem;
-	/* border: 3px solid white; */
 	background-color: var(--sub2Color);
 	margin-top: 2rem;
 }
@@ -93,49 +91,52 @@ p{
 	width: 80%;
 	height: 100%;
 	
-	padding: 1rem;
+	padding: 1rem 0.5rem;
 	/* border: 3px solid green; */
 }
 .freeBoard{
 	background-color: var(--sub2Color);
-	margin: 1rem;
+	margin: 1rem 0;
 	width: 100%;
 	height: 33%;
 	max-height: 500px;
 	overflow-y: scroll;
-	/* border: 3px solid black; */
+	overflow-x: hidden;
 }
 .camping{
 	background-color: var(--sub2Color);
-	margin: 1rem;
+	margin: 1rem 0;
 	width: 100%;
 	max-height: 500px;
 	height: 33%;
 	overflow-y: scroll;
-	/* border: 3px solid blue; */
+	overflow-x: hidden;
 }
 .qna{
 	background-color: var(--sub2Color);
-	margin: 1rem;
+	margin: 1rem 0;
 	width: 100%;
 	max-height: 500px;
 	height: 33%;
 	overflow-y: scroll;
-	/* border: 3px solid red; */
+	overflow-x: hidden;
 }
 .buy{
 	background-color: var(--sub2Color);
-	margin: 1rem;
+	margin: 1rem 0;
 	width: 100%;
 	max-height: 500px;
 	height: 33%;
 	overflow-y: scroll;
-	/* border: 3px solid red; */
+	overflow-x: hidden;
 }
 .lineDiv{
 	width: 100%;
 	padding: 0.5rem;
 	border-bottom: 3px solid var(--borderColor);
+}
+.lineDiv a span {
+	transition: .3s;
 }
 .idxSpan{
 	color: var(--fontColor);
@@ -147,6 +148,51 @@ p{
 
 .subjectSpan{
 	color: var(--fontColor);
+}
+
+@media screen and (min-width: 1px) and (max-width: 767px) {
+	.profileImg{
+		width: 80px;
+		height: 80px;
+	}
+	.topRight span{
+		font-size: 0.8rem;
+	}
+	.topRight p{
+		font-size: 0.7rem;
+	}
+	.bottomLeft{
+		width: 100%;
+	}
+	.bottomRight{
+		width: 100%;
+		padding: 0;
+	}
+	.bottomLeft span{
+		font-size: 0.8rem;
+	}
+	.bottomLeft p{
+		font-size: 0.7rem;
+	}
+	.bottomRight span{
+		font-size: 0.8rem;
+	}
+	.bottomRight p{
+		font-size: 0.7rem;
+	}
+}
+
+@media screen and (min-width: 768px) and (max-width: 1023px) {
+	.profileImg{
+		width: 150px;
+		height: 150px;
+	}
+}
+
+@media screen and (min-width: 1023px) {
+	.lineDiv a:hover span{
+		color: var(--fontColor);
+	}
 }
 
 
