--- a/src/main/webapp/resources/css/shop/order/order_detail.css
+++ b/src/main/webapp/resources/css/shop/order/order_detail.css
@@ -1,28 +1,28 @@
 /*주문 상세 컨테이너*/
-
-h2{
-	font-family: 'GimpoGothicBold00';
-	color: var(--subFontColor);
-}
-
 .orderContainer{
     width: 70%;
     margin: 0 auto;
-    
-}
-
-/*주소*/
-.orderContainer .orderAddressDiv{
-    width: 100%;
-   /*  border: 3px solid crimson; */
-}
-
-.addressDiv{
-    /* height: 300px; */
-    /* border: 3px solid black; */
-    padding: 1rem;
+    padding-top: 1rem;
     font-family: 'GimpoGothicBold00';
-    color: white;
+}
+/*상세 TOP 디비전 공통*/
+.orderAddressTop, .orderProductTop, .orderPriceTop, .orderPaymentTop{
+    padding: 1rem;
+    background-color: var(--mainColor);
+    color: var(--subFontColor);
+}
+
+/*상세 BOTTOM 디비전 공통*/
+.orderAddressBottom, .orderProductBottom, .orderPriceBottom, .orderPaymentBottom{
+    width: 100%;
+    padding: 1rem;
+}
+/*주소*/
+.orderAddressDiv{
+    width: 100%;
+}
+.addressDiv{
+    padding: 1rem;
     font-size: 1.2rem;
 }
 
@@ -30,11 +30,10 @@ h2{
 	width: 100%;
 	padding: 1rem;
 	background-color: var(--sub2Color);
-	color: white;
-	font-family: 'GimpoGothicBold00';
-	transition: .3s;
+    transition: .3s;
 	border: none;
 	outline: none;
+    color: var(--basicFontColor);
 }
 
 .orderSelect{
@@ -55,49 +54,43 @@ h2{
 /*상품정보*/
 .orderProductDiv{
     width: 100%;
-    /* border: 3px solid blue; */
 }
 
 .orderProductBottom{
     display: flex;
     width: 100%;
-    height: 300px;
-   	/* border: 3px solid red; */
+
 }
 
 .productImgDiv{
-    width: 30%;
+    width: 150px;
     height: 100%;
-    /* border: 3px solid rebeccapurple; */
     overflow: hidden;
-    
 }
 /*상품 이미지*/
 .productImg{
     width: 100%;
+    max-width: 150px;
     height: 100%;
+    max-height: 150px;
     object-fit: fill;
     transition: .3s;
 }
 
-.productImg:hover{
-	transform: scale(1.1,1.1);
-}
-
 .productDetail{
-	font-family: 'GimpoGothicBold00';
-    /* border: 3px solid white; */
-    width: 70%;
+    width: calc(100% - 150px);
     height: 100%;
-    padding: 1rem;
-    font-size: 1.4rem;
-    color: white;
+    padding: 0 1rem;
+    font-size: 1rem;
+}
+.productNameP{
+    font-size: 1.2rem;
+    transition: .3s;
 }
 
 /*결제정보*/
 .orderPriceDiv{
     width: 100%;
-    /* border: 3px solid white; */
 }
 
 .orderPriceBottom{
@@ -110,21 +103,17 @@ h2{
 }
 
 .orderPriceBottom table td{
-   	
     padding: 0.2rem;
     color: white;
     height: 50px;
 }
 
 .orderPriceBottom table td:first-child{
-	
     width: 70%;
     font-size: 1.2rem;
-    font-family: 'Black Han Sans';
 }
 
 .orderPriceBottom table td:last-child{
-	font-family: 'GimpoGothicBold00';
     width: 30%;
 }
 
@@ -151,26 +140,12 @@ h2{
 
 .orderPaymentBottom #paymentBtn{
     background-color: var(--mainColor);
-    color: white;
+    color: var(--basicFontColor);
     padding: 1rem;
     
 }
 
-/*상세 TOP 디비전 공통*/
-.orderAddressTop, .orderProductTop, .orderPriceTop, .orderPaymentTop{
-    width: 100%;
-    font-size: 1.5rem;
-    color: white;
-    padding: 1rem;
-    border-bottom: 3px solid var(--borderColor);
-}
 
-/*상세 BOTTOM 디비전 공통*/
-.orderAddressBottom, .orderProductBottom, .orderPriceBottom, .orderPaymentBottom{
-    width: 100%;
-    /* height: 600px; */
-    padding: 1rem;
-}
 
 /*쿠폰사용 컨테이너*/
 .couponUseCon{
@@ -192,7 +167,6 @@ h2{
     transform: translate(-50%,-50%);
     width: 450px;
     height: 50px;
-    background-color: white;
     display: flex;
 }
 
@@ -200,10 +174,13 @@ h2{
 /*쿠폰정보*/
 .couponInfoDiv{
 	display : none;
-	/* border: 3px solid white; */
-	height: 50px;
+    height: 50px;
 	align-items: center;
+    justify-content: end;
 	
+}
+.tdRight{
+    text-align: right;
 }
 
 /*쿠폰취소*/
@@ -213,10 +190,6 @@ h2{
 	transition: .3s;
 }
 
-.couponCancle:hover{
-	
-	transform: scale(1.1,1.1);
-}
 
 /*등급 이름 스팬 */
 .gradeNameSpan{
@@ -233,6 +206,11 @@ h2{
 	color: var(--subFontColor);
 	font-size: 2.5rem;
 }
+#insertCouponBtn{
+    border-radius: 20px;
+    padding: 0.2rem;
+    float: right;
+}
 
 /*취소아이콘*/
 .material-symbols-outlined {
@@ -241,4 +219,78 @@ h2{
   'wght' 400,
   'GRAD' 0,
   'opsz' 48
+}
+
+@media screen and (min-width: 1px) and (max-width: 767px){
+    .orderContainer{
+        width: 100%;
+    }
+    /*상세 TOP 디비전 공통*/
+    .orderAddressTop h2, .orderProductTop h2, .orderPriceTop h2, .orderPaymentTop h2{
+        font-size: 1rem;
+    }
+    /*상세 BOTTOM 디비전 공통*/
+    .orderAddressBottom p, .orderProductBottom p, .orderPriceBottom p, .orderPaymentBottom p{
+      font-size: 0.8rem;
+    }
+    .orderInputs{
+        font-size: 0.8rem;
+    }
+    .couponDiv{
+        width: fit-content;
+    }
+    #useCouponText{
+        width: 200px;
+    }
+    #useCouponBtn{
+        width: 50px;
+        font-size: 0.7rem;
+
+    }
+    .productImgDiv{
+        width: 100px;
+    }
+    /*상품 이미지*/
+    .productImg{
+        max-width: 100px;
+        max-height: 100px;
+    }
+
+    .productDetail{
+        width: calc(100% - 100px);
+    }
+    .productNameP{
+        font-size: 1rem;
+    }
+    .productDetail p{
+        font-size: 0.7rem;
+    }
+    table p{
+        font-size: 0.7rem;
+    }
+    .productQuantitySpan, .gradeNameSpan{
+        font-size: 1rem;
+    }
+    #resultPriceSpan{
+        font-size: 1.3rem;
+    }
+    #insertCouponBtn{
+        width: 100px;
+        height: 35px;
+        font-size: 0.7rem;
+    }
+
+}
+
+@media screen and (min-width: 768px) and (max-width: 1023px){
+
+}
+
+@media screen and (min-width: 1024px) {
+    .productAnchor:hover .productNameP{
+        color: var(--fontColor);
+    }
+    .couponCancle:hover{
+        transform: scale(1.1,1.1);
+    }
 }
