최원석 노트북

--- a/src/main/webapp/resources/css/global.css
+++ b/src/main/webapp/resources/css/global.css
@@ -32,7 +32,7 @@
 
 body{
 	background-color: var(--subColor);
-	font-family: 'GimpoGothicRegular00';
+	ffont-family: 'GimpoGothicRegular00';
 	color: var(--basicFontColor);
 	min-width: 320px;
 }
