--- a/src/main/webapp/resources/css/shop/main/shop_admin.css
+++ b/src/main/webapp/resources/css/shop/main/shop_admin.css
@@ -25,12 +25,37 @@
 .carouselImgDiv {
     width: 100%;
     height: 100%;
+    border: 3px solid var(--basicFontColor);
 }
 .carouselImgDiv img {
     width: 100%;
     height: 100%;
     object-fit: fill;
 }
+.adNaviCon{
+    position: absolute;
+    width: 200px;
+    height: 30px;
+    left: 50%;
+    bottom: 10px;
+    transform: translateX(-50%);
+    z-index: 10;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+.adNavi{
+    background-color: white;
+    width: 20px;
+    height: 20px;
+    border-radius: 5px;
+    transition: .3s;
+}
+.adNavi:first-child{
+    background-color: var(--fontColor);
+    transform : scale(1.5,1.5);
+}
+
 /*-------------------------------------------------------------------------*/
 
 /*상품구역, 네비구역 컨테이너*/
@@ -53,14 +78,14 @@ main {
     width: 100%;
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: start;
     padding: 0.5rem;
     font-family: 'GimpoGothicBold00';
     font-size: 2rem;
 
 }
 .itemBestHeader h1 {
-
+    padding-left: 0.5rem;
 }
 .itemBestHeader h1 span {
     color: var(--fontColor);
@@ -139,7 +164,7 @@ main {
     height: 80%;
     max-height: 200px;
     overflow: hidden;
-
+    border: 3px solid var(--basicFontColor);
 }
 /*순위 디비전*/
 .scoreDiv {
@@ -170,14 +195,22 @@ main {
 .itemAllHeader {
     width: 100%;
     display: flex;
-    align-items: center;
-    justify-content: center;
+    align-items: end;
+    justify-content: start;
     padding: 0.5rem;
     font-family: 'GimpoGothicBold00';
     font-size: 2rem;
 }
 .itemAllHeader h1 {
-    color: var(--fontColor);
+    margin-left: 0.5rem;
+}
+.productRegistSpan{
+    font-size: 1rem;
+    margin-left: 1rem;
+    text-decoration: underline;
+    background-color: var(--mainColor);
+    border-radius: 10px;
+    padding: 0.5rem;
 }
 /*상품 내용*/
 .itemAllBody {
@@ -241,6 +274,7 @@ main {
     height: 80%;
     max-height: 200px;
     overflow: hidden;
+    border: 3px solid var(--basicFontColor);
 }
 /*상품 썸네일 이미지 */
 .thumbnailImg {
@@ -449,10 +483,12 @@ main {
         display: flex;
         justify-content: center;
         align-items: center;
+        border: none;
     }
     .thumbnailDivBest img{
         width: 50px;
         height: 50px;
+        border: 3px solid black;
     }
 
     .scoreDiv span{
