--- a/src/main/webapp/resources/css/home.css
+++ b/src/main/webapp/resources/css/home.css
@@ -29,7 +29,7 @@
 	color: white;
 	display: flex;
 	align-items: center;
-    justify-content: space-around;
+    justify-content: end;
 }
 .menuDiv a{
 	display: flex;
@@ -39,9 +39,11 @@
 	cursor: pointer;
 	transition: .3s;
 	font-family: 'Black Han Sans';
+	margin-right: 1rem;
 }
 .menuDiv span{
 	transition: .3s;
+	color: var(--subFontColor);
 }
 /*메인*/
 .homeMain{
