--- a/src/main/webapp/resources/css/shop/main/shop_admin.css
+++ b/src/main/webapp/resources/css/shop/main/shop_admin.css
@@ -50,6 +50,7 @@
     height: 20px;
     border-radius: 5px;
     transition: .3s;
+    cursor: pointer;
 }
 .adNavi:first-child{
     background-color: var(--fontColor);
@@ -60,12 +61,14 @@
 
 /*상품구역, 네비구역 컨테이너*/
 main {
+    margin-top: 5rem;
     width: 100%;
     display: flex;
 }
 /*상품 구역*/
 .itemContainer {
     width: 80%;
+
     background-color: var(--subColor);
 }
 .itemBestDivCon{
@@ -88,7 +91,8 @@ main {
     padding-left: 0.5rem;
 }
 .itemBestHeader h1 span {
-    color: var(--fontColor);
+    color: var(--subFontColor);
+    font-size: 2rem;
 }
 /*상품 탑 10 내용*/
 .itemBestBody {
@@ -151,10 +155,12 @@ main {
 /*이름 디비전*/
 .nameDivBest {
     display: flex;
+    width: 100%;
     height: 20%;
     padding: 0.5rem;
     justify-content: center;
     align-items: center;
+    background-color: rgba(0, 0, 0, 0.16);
 
 }
 /*상품 썸네일 이미지 디비전 */
@@ -189,6 +195,7 @@ main {
     transition: .3s;
 }
 .itemAllDivCon{
+    margin-top: 5rem;
     width: 100%;
 }
 /*상품 헤더*/
@@ -247,7 +254,9 @@ main {
 /*이름 디비전*/
 .nameDiv {
     display: flex;
+    width: 100%;
     height: 10%;
+    background-color: rgba(0, 0, 0, 0.16);
     padding: 0.5rem;
     justify-content: center;
     align-items: center;
@@ -328,7 +337,7 @@ main {
     height: 800px;
     background-color: var(--mainColor);
     border-radius: 4px;
-    padding: 1rem;
+    padding: 0.5rem;
     position: sticky;
     top: 1rem;
     left: 0;
@@ -338,6 +347,7 @@ main {
 .gradeDiv {
     height: 20%;
     max-width: 600px;
+
     margin: 0 auto;
 }
 
@@ -359,7 +369,7 @@ main {
 
 .gradeInnerBottom {
     height: 20%;
-    border-top: 1px solid var(--borderColor);
+    background-color: rgba(0, 0, 0, 0.5);
     display: flex;
     align-items: center;
     justify-content: center;
@@ -509,6 +519,7 @@ main {
         font-size: 1rem;
     }
 
+
 }
 
 /* 타블렛 */
@@ -534,8 +545,8 @@ main {
     }
     /*탑 10 이름*/
     .nameDivBest{
-        width: 30%;
-        height: 100%;
+        width: 50%;
+        height: 30%;
     }
     /*탑 10 썸네일*/
     .thumbnailDivBest{
