--- a/src/main/webapp/resources/css/shop/main/shop_user.css
+++ b/src/main/webapp/resources/css/shop/main/shop_user.css
@@ -50,6 +50,7 @@
     height: 20px;
     border-radius: 5px;
     transition: .3s;
+    cursor: pointer;
 }
 .adNavi:first-child{
     background-color: var(--fontColor);
@@ -59,6 +60,7 @@
 
 /*상품구역, 네비구역 컨테이너*/
 main {
+    margin-top: 5rem;
     width: 100%;
     display: flex;
 }
@@ -88,6 +90,7 @@ main {
 }
 .itemBestHeader h1 span {
     color: var(--fontColor);
+    font-size: 2rem;
 }
 /*상품 탑 10 내용*/
 .itemBestBody {
@@ -149,11 +152,13 @@ main {
 
 /*이름 디비전*/
 .nameDivBest {
+    width: 100%;
     display: flex;
     height: 20%;
     padding: 0.5rem;
     justify-content: center;
     align-items: center;
+    background-color: rgba(0, 0, 0, 0.16);
 
 }
 /*상품 썸네일 이미지 디비전 */
@@ -163,7 +168,7 @@ main {
     height: 80%;
     max-height: 200px;
     overflow: hidden;
-        border: 3px solid var(--basicFontColor);
+    border: 3px solid var(--basicFontColor);
 }
 /*순위 디비전*/
 .scoreDiv {
@@ -189,6 +194,7 @@ main {
 }
 .itemAllDivCon{
     width: 100%;
+    margin-top: 5rem;
 }
 /*상품 헤더*/
 .itemAllHeader {
@@ -201,7 +207,6 @@ main {
     font-size: 2rem;
 }
 .itemAllHeader h1 {
-    color: var(--fontColor);
     margin-left: 0.5rem;
 }
 /*상품 내용*/
@@ -239,7 +244,9 @@ main {
 /*이름 디비전*/
 .nameDiv {
     display: flex;
+    width: 100%;
     height: 20%;
+    background-color: rgba(0, 0, 0, 0.16);
     padding: 0.5rem;
     justify-content: center;
     align-items: center;
@@ -306,7 +313,7 @@ main {
     height: 800px;
     background-color: var(--mainColor);
     border-radius: 4px;
-    padding: 1rem;
+    padding: 0.5rem;
     position: sticky;
     top: 1rem;
     left: 0;
@@ -337,7 +344,7 @@ main {
 
 .gradeInnerBottom {
     height: 20%;
-    border-top: 1px solid var(--borderColor);
+    background-color: rgba(0, 0, 0, 0.5);
     display: flex;
     align-items: center;
     justify-content: center;
@@ -508,8 +515,8 @@ main {
     }
     /*탑 10 이름*/
     .nameDivBest{
-        width: 30%;
-        height: 100%;
+        width: 50%;
+        height: 30%;
     }
     /*탑 10 썸네일*/
     .thumbnailDivBest{
