--- a/src/main/webapp/resources/css/shop/product/product_detail_user.css
+++ b/src/main/webapp/resources/css/shop/product/product_detail_user.css
@@ -9,6 +9,7 @@ main {
 .productTop {
     width: 100%;
     height: calc(100vh - 80px);
+
     display: flex;
 }
 
@@ -73,7 +74,7 @@ main {
 
 .descriptionTable {
     width: 100%;
-    height: 100%;
+    height: 80%;
     color: var(--basicFontColor);
 }
 
@@ -109,7 +110,9 @@ main {
 
 #quantityText {
     width: 100%;
+    min-width: 200px;
     height: 100%;
+    min-height: 50px;
     text-align: center;
     font-size: 2rem;
     background-color: var(--mainColor);
