--- a/src/main/webapp/resources/css/shop/shop_global.css
+++ b/src/main/webapp/resources/css/shop/shop_global.css
@@ -3,7 +3,6 @@ header{
     height: 80px;
     display: flex;
     background-color: var(--mainColor);
-
     font-family: 'Black Han Sans'; 
 }
 #logOutBtn{
@@ -59,10 +58,12 @@ header a{
 }
 .login span{
     transition: .3s;
+    color: var(--subFontColor);
 }
 .login i{
     font-size: 1.5rem;
     transition: .3s;
+    color: var(--subFontColor);
 }
 /*메뉴 스팬들*/
 #basket, #loginBtn, #joinBtn, #logOutBtn, #loginCommu, #loginShop{
@@ -80,32 +81,38 @@ header a{
     background-color: var(--fontColor);
     border-radius: 20px;
     padding: 0.5rem;
+
 }
 
+
 footer{
+    margin-top: 5rem;
     width: 100%;
-    border-top: 1px solid var(--borderColor);
-    display: flex;
-    flex-direction: row;
-    padding-bottom: 1rem;
 }
 
 
 .footer_content{
     width: 100%;
-    height: 100%;
     display: flex;
     flex-direction: column;
+    align-items: center;
     padding: 1rem;
-
     color: var(--subFontColor);
-
+    background-color: var(--sub2Color);
 }
 .footer_content h1{
-    margin-bottom: 0.5rem;
+    margin-bottom: 2rem;
 }
 .footer_content p{
     margin: 0 0 0.3rem;
+}
+.footer_copyright{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 1rem;
+    background-color: var(--mainColor);
+    height: 100px;
 }
 
 /*헤더 유저 이미지*/
@@ -142,18 +149,11 @@ footer{
         margin-left: 0.3rem;
         margin-right: 0.5rem;
     }
-    .footer_logo h1{
-        font-size: 0.8rem;
-    }
-
-    .footer_content h1{
-        font-size: 0.8rem;
-    }
-    .footer_content p{
-        font-size: 0.5rem;
-    }
     .loginUserIdSpan{
         display: none;
+    }
+    footer p{
+        font-size: 0.8rem;
     }
 
 }
@@ -171,9 +171,6 @@ footer{
     .login a{
         font-size: 0.8rem;
         margin-left: 0.8rem;
-    }
-    .footer_logo h1{
-        font-size: 1rem;
     }
     .loginUserIdSpan{
         display: none;
@@ -194,7 +191,7 @@ footer{
         display: flex;
         align-items: center;
     }
-    header a:hover, header .logo h1:hover, .footer_logo h1:hover{
+    header a:hover, header .logo h1:hover{
         color: var(--fontColor);
         transform: translateY(-10%);
     }
