--- a/src/main/webapp/resources/css/shop/shop_global.css
+++ b/src/main/webapp/resources/css/shop/shop_global.css
@@ -3,7 +3,8 @@ header{
     height: 80px;
     display: flex;
     background-color: var(--mainColor);
-    font-family: 'Black Han Sans'; 
+    font-family: 'Black Han Sans';
+    position: relative;
 }
 #logOutBtn{
 	cursor: pointer;
@@ -11,12 +12,9 @@ header{
 }
 
 header a{
-    color: var(--basicFontColor);
     text-decoration: none;
 	transition: .3s;
 }
-
-
 .logo{
     width: 15%;
     height: 100%;
@@ -26,12 +24,12 @@ header a{
     align-items: center;
     justify-content: center;
     cursor: pointer;
+    background-color: var(--mainColor);
 }
 .logo h1{
 	color: var(--fontColor);
 	transition: .3s;
 }
-
 
 .menu{
     width: 25%;
@@ -41,7 +39,7 @@ header a{
     justify-content: start;
 }
 .menu a{
-    margin-left: 1rem;
+    margin: 0 1rem;
 }
 
 .login{
@@ -50,11 +48,33 @@ header a{
     display: flex;
     align-items: center;
     justify-content: end;
+    transition: .3s ease-in-out;
+    background-color: rgba(24, 24, 24, 0.68);
+    z-index: 2;
 }
 .login a{
+    margin: 0 0.5rem;
+}
+
+.loginMenuAnchor{
+    display: inline-block;
+    width: 50px;
+    height: 50px;
     transition: .3s;
     cursor: pointer;
-    margin-right: 1rem;
+    border-radius: 50%;
+}
+/*로그인 유저 앵커*/
+#loginName{
+    border-radius: 40px;
+    padding: 5px;
+}
+/*로그인 유저 이미지*/
+#headerUserProfileImg{
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    border: 3px solid dodgerblue;
 }
 .login span{
     transition: .3s;
@@ -66,7 +86,7 @@ header a{
     color: var(--subFontColor);
 }
 /*메뉴 스팬들*/
-#basket, #loginBtn, #joinBtn, #logOutBtn, #loginCommu, #loginShop{
+.loginMenuAnchor{
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -74,15 +94,14 @@ header a{
 }
 /*메뉴 아이콘 설명 택스트*/
 .headerAnchorTextSpan{
-    font-size: 0.8rem;
+    font-size: 0.5rem;
 }
 #loginShop {
     pointer-events: none;
-    background-color: var(--fontColor);
-    border-radius: 20px;
-    padding: 0.5rem;
+    background-color: rgba(61, 61, 61, 0.5);
 
 }
+
 
 
 footer{
@@ -115,12 +134,6 @@ footer{
     height: 100px;
 }
 
-/*헤더 유저 이미지*/
-#headerUserProfileImg{
-    width: 50px;
-    height: 50px;
-    border-radius: 40%;
-}
 /*설명 디비전*/
 .headerToolTipBox{
     background-color: var(--sub2Color);
@@ -132,6 +145,17 @@ footer{
 
 }
 
+.more_horiz{
+    display: none;
+    position: absolute;
+    top: 50%;
+    right: 10px;
+    transition: .3s ease-in-out;
+    cursor: pointer;
+    transform: translateY(-50%) rotateZ(90deg);
+}
+
+
 /* 스마트폰 */
 @media screen and (min-width:1px) and (max-width:767px) {
 
@@ -142,12 +166,16 @@ footer{
     /*메뉴*/
     .menu a{
         font-size: 0.5rem;
-        margin-left: 0.5rem;
+        margin:0 0.2rem;
     }
-    .login a{
-        font-size: 0.5rem;
-        margin-left: 0.3rem;
-        margin-right: 0.5rem;
+    .login{
+        position: absolute;
+        width: 100%;
+        top: 80px;
+        right: -100%;
+    }
+    .more_horiz{
+        display: block;
     }
     .loginUserIdSpan{
         display: none;
@@ -159,18 +187,8 @@ footer{
 }
 /* 타블렛 */
 @media screen and (min-width:768px) and (max-width:1023px) {
-
-    /*로고*/
     .logo h1{
-        font-size: 1rem;
-    }
-    /*메뉴*/
-    .menu a{
-        font-size: 0.8rem;
-    }
-    .login a{
-        font-size: 0.8rem;
-        margin-left: 0.8rem;
+        font-size: 1.5rem;
     }
     .loginUserIdSpan{
         display: none;
@@ -180,27 +198,22 @@ footer{
 /* 데스크탑 */
 @media screen and (min-width:1024px) {
 
-    .login a{
-        font-size: 1rem;
-        margin-left: 1rem;
-    }
-    .login a:hover span, .login a:hover i{
-        color: var(--fontColor);
-    }
     #loginName{
         display: flex;
         align-items: center;
     }
-    header a:hover, header .logo h1:hover{
+    .menu a:hover {
         color: var(--fontColor);
         transform: translateY(-10%);
     }
-    #loginName:hover .loginUserIdSpan{
-        color: var(--fontColor);;
+    #loginName:hover{
+        background-color: rgba(126, 126, 126, 0.38);
+
     }
-    header a:hover .material-symbols-outlined, header a:hover .headerAnchorTextSpan{
-        color: var(--fontColor);
+    .loginMenuAnchor:hover{
+        background-color: rgba(126, 126, 126, 0.38);
     }
+
 }
 
 
