--- a/src/main/webapp/resources/css/admin/detail.css
+++ b/src/main/webapp/resources/css/admin/detail.css
@@ -42,8 +42,8 @@ p{
 .profileImg{
 	width: 300px;
 	height: 300px;
-	border-radius: 40%;
-	border: 1px solid black;
+	border-radius: 50%;
+	border: 3px solid dodgerblue;
 }
 .topRight{
 	width: 50%;
