--- a/src/main/webapp/resources/css/common/forgot.css
+++ b/src/main/webapp/resources/css/common/forgot.css
@@ -52,9 +52,9 @@ body{
 /* 스마트폰 */
 @media screen and (min-width:1px) and (max-width:767px) {
 	.forgotContainer{
-		width: 320px;
+		width: 100%;
 		margin: 0 auto;
-		padding: 0;
+		padding: 0.5rem;
 
 	}
 	.btnDiv{
