--- a/src/main/webapp/resources/css/common/login.css
+++ b/src/main/webapp/resources/css/common/login.css
@@ -87,9 +87,9 @@
 /* 스마트폰 */
 @media screen and (min-width:1px) and (max-width:767px) {
 	.loginContainer{
-		width: 320px;
+		width: 90%;
 		margin: 0 auto;
-		padding: 0;
+		padding: 0.5rem;
 
 	}
 	.btnDiv{
