--- a/src/main/webapp/resources/css/shop/main/shop_admin.css
+++ b/src/main/webapp/resources/css/shop/main/shop_admin.css
@@ -63,11 +63,13 @@
 main {
     width: 100%;
     display: flex;
+    position: relative;
 }
 /*상품 구역*/
 .itemContainer {
-    width: 80%;
-
+    width: 100%;
+    max-width: 1600px;
+    margin: 0 auto;
     background-color: var(--subColor);
 }
 .itemBestDivCon{
@@ -83,15 +85,13 @@ main {
     justify-content: start;
     padding: 0.5rem;
     font-family: 'GimpoGothicBold00';
-    font-size: 2rem;
-
 }
 .itemBestHeader h1 {
     padding-left: 0.5rem;
 }
 .itemBestHeader h1 span {
-    color: var(--subFontColor);
-    font-size: 2rem;
+    color: var(--fontColor);
+    font-size: 1.8rem;
 }
 /*상품 탑 10 내용*/
 .itemBestBody {
@@ -108,7 +108,7 @@ main {
     color: var(--basicFontColor);
     background-color: rgba(33, 33, 33, 0.8);
     cursor: pointer;
-    z-index: 600;
+    z-index: 2;
     padding: 0.5rem;
     border-radius: 20%;
     transition: .3s;
@@ -126,7 +126,6 @@ main {
     width: 400%;
     height: 100%;
     display: flex;
-    /*flex-wrap: wrap;*/
     color: var(--subFontColor);
 }
 .itemBestDiv a {
@@ -153,8 +152,8 @@ main {
 
 /*이름 디비전*/
 .nameDivBest {
-    display: flex;
     width: 100%;
+    display: flex;
     height: 20%;
     padding: 0.5rem;
     justify-content: center;
@@ -205,7 +204,6 @@ main {
     justify-content: start;
     padding: 0.5rem;
     font-family: 'GimpoGothicBold00';
-    font-size: 2rem;
 }
 .itemAllHeader h1 {
     margin-left: 0.5rem;
@@ -317,39 +315,51 @@ main {
 }
 /*사이드바 디비전*/
 .side {
-    width: 20%;
-    position: relative;
+    width: 220px;
+    position: fixed;
     transition: .3s ease-in-out;
+    top: 0;
+    right: 0;
+    transform: translateX(100%);
+    z-index: 999;
+
 }
 /*알림 메시지*/
 .side p {
     font-size: 0.8rem;
 }
-.closeSideSpan{
-    transition: .3s;
+/*사이드 버튼*/
+.categorySpanAnchor{
+    width: 30px;
+    height: 30px;
     cursor: pointer;
     position: absolute;
-    z-index: -1;
-    top: 2rem;
-    right: 2rem;
+    top: 160px;
+    left: -25px;
+    background-color: var(--mainColor);
+    z-index: 999;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-top-left-radius: 5px;
+    border-bottom-left-radius: 5px;
 }
-
+.categorySpanAnchor span{
+    transition: .3s;
+}
 .side_navBar {
     width: 100%;
-    height: 800px;
+    max-height: 100vh;
     background-color: var(--mainColor);
     border-radius: 4px;
     padding: 0.5rem;
-    position: sticky;
-    top: 1rem;
-    left: 0;
+    overflow-y: scroll;
 }
 
 /*등급 구역 */
 .gradeDiv {
     height: 20%;
     max-width: 600px;
-
     margin: 0 auto;
 }
 
@@ -362,20 +372,18 @@ main {
 }
 
 #userProfileImg {
-    width: 100%;
-    max-width: 200px;
-    height: 100%;
-    max-height: 200px;
+    width: 120px;
+    height: 120px;
     border-radius: 40%;
 }
 
 .gradeInnerBottom {
     height: 20%;
-    background-color: rgba(0, 0, 0, 0.5);
     display: flex;
     align-items: center;
     justify-content: center;
     font-size: 0.5rem;
+    background-color: rgba(0, 0, 0, 0.35);
 }
 .gradeInnerBottom span{
     margin-left: 0.3rem;
@@ -396,8 +404,6 @@ main {
     display: flex;
     flex-direction: column;
     align-items: center;
-
-
 }
 .sortMenuSpanDiv{
     width: 100%;
@@ -419,7 +425,6 @@ main {
     display: flex;
     flex-direction: column;
     align-items: center;
-
 }
 /*정렬 세부 내용 */
 .categorySpan, .brandSpan {
@@ -433,39 +438,22 @@ main {
 }
 
 
-/*태블릿, 스마트폰 용 카테고리 스팬*/
-.categorySpanAnchor{
-    display: none;
-    cursor: pointer;
-    transition: .3s;
-    position: absolute;
-    right: 1rem;
-}
-.moreIcon{
-    transition: .3s;
-
-}
-
 
 
 /* ------------------------------------------------------------------------------------------------------*/
 
 /* 스마트폰 */
 @media screen and (min-width:1px) and (max-width:767px) {
-    body{
-        min-width: 320px;
-    }
     /*광고*/
     .carousel {
         height: 300px;
     }
-    /*상품구역*/
-    .itemContainer {
-        width: 100%;
-    }
-    /*탑 10 컨테이너*/
+    /*탑 10*/
     .itemBestBody{
         height: 100px;
+    }
+    .forwardSpan, .backSpan{
+        top: 70%;
     }
     .itemBestDiv{
         width: 2000%;
@@ -501,9 +489,8 @@ main {
     .thumbnailDivBest img{
         width: 50px;
         height: 50px;
-        border: 3px solid black;
+        border: 3px solid var(--basicFontColor);
     }
-
     .scoreDiv span{
         font-size: 3rem;
     }
@@ -512,26 +499,14 @@ main {
         width: 100%;
         height: 300px;
     }
-    .categorySpanAnchor{
-        display: block;
-    }
     .sortMenuDiv span{
-        font-size: 0.7rem;
+        font-size: 0.8rem;
     }
-    .productRegistSpan{
-        font-size: 1rem;
-    }
-
 
 }
 
 /* 타블렛 */
 @media screen and (min-width:768px) and (max-width:1023px) {
-
-    /*상품구역*/
-    .itemContainer {
-        width: 100%;
-    }
     /*탑 10 컨테이너*/
     .itemBestBody{
         height: 200px;
@@ -556,16 +531,11 @@ main {
         width: 70%;
         height: 100%;
     }
-
     /*일반 상품*/
     .product {
         width: 50%;
         height: 300px;
     }
-    .categorySpanAnchor{
-        display: block;
-    }
-
 
 }
 
@@ -581,21 +551,14 @@ main {
     .moreSpan:hover {
         background-color: rgba(38, 38, 38, 0.5);
     }
-    .closeSideSpan:hover{
-        color: var(--fontColor);
-        transform: scale(1.2,1.2);
-    }
     .categorySpan:hover, .brandSpan:hover {
         background-color: rgba(38, 38, 38, 0.5);
-    }
-    .categorySpanAnchor:hover .moreIcon{
-        color: var(--fontColor);
     }
     .sortMenuSpanDiv:hover{
         background-color: rgba(49, 49, 49, 0.78);
     }
-}
 
+}
 
 
 
