--- a/src/main/webapp/resources/css/shop/product/product_detail_admin.css
+++ b/src/main/webapp/resources/css/shop/product/product_detail_admin.css
@@ -67,14 +67,20 @@ main {
 /*상단 오른쪽 상품 설명 구역*/
 .descriptionDiv {
     width: 100%;
-    height: 70%;
+    height: 80%;
     padding: 1rem;
+    display: flex;
+    align-items: center;
 }
 
 .descriptionTable {
+    margin: 0 auto;
     width: 100%;
+    max-width: 700px;
     height: 100%;
+    max-height: 700px;
     color: var(--basicFontColor);
+    background-color: rgba(31, 31, 31, 0.72);
 }
 
 .descriptionTable td {
@@ -555,6 +561,7 @@ main {
     .quantityDiv {
         height: 100px;
         padding: 0;
+        font-size: 0.8rem;
     }
 
     .quantityBtn {
@@ -568,7 +575,10 @@ main {
     .btnDiv {
         margin: 0.5rem 0;
     }
-
+    #modifyBtn, #deleteBtn{
+        font-size: 0.8rem;
+        width: 100px;
+    }
     .reviewGraphDiv {
         flex-direction: column;
         height: fit-content;
@@ -592,6 +602,16 @@ main {
 
     .reviews, .reviewsDiv {
         padding: 0.2rem;
+    }
+    .navigatorContainer{
+        right: 2px;
+    }
+    .youtubeInnerDiv{
+        width: 100%;
+        height: 100%;
+    }
+    .youtubeInnerDiv h1{
+        font-size: 0.8rem;
     }
     .adIframe{
         width: 100%;
