--- a/src/main/webapp/resources/css/shop/product/product_detail_user.css
+++ b/src/main/webapp/resources/css/shop/product/product_detail_user.css
@@ -68,14 +68,20 @@ main {
 /*상단 오른쪽 상품 설명 구역*/
 .descriptionDiv {
     width: 100%;
-    height: 70%;
+    height: 80%;
     padding: 1rem;
+    display: flex;
+    align-items: center;
 }
 
 .descriptionTable {
+    margin: 0 auto;
     width: 100%;
-    height: 80%;
+    max-width: 700px;
+    height: 100%;
+    max-height: 700px;
     color: var(--basicFontColor);
+    background-color: rgba(31, 31, 31, 0.72);
 }
 
 .descriptionTable td {
@@ -90,7 +96,7 @@ main {
 }
 
 .quantityLeft {
-    width: 50%;
+    width: 80%;
     height: 100%;
     display: flex;
     align-items: center;
@@ -104,17 +110,15 @@ main {
 }
 
 .quantityConLeft {
-    width: 70%;
+    width: 50%;
     height: 100%;
 }
 
 #quantityText {
     width: 100%;
-    min-width: 200px;
     height: 100%;
-    min-height: 50px;
     text-align: center;
-    font-size: 2rem;
+    font-size: 1.5rem;
     background-color: var(--mainColor);
     color: var(--subFontColor);
     border: none;
@@ -126,7 +130,7 @@ main {
 }
 
 .quantityConRight {
-    width: 30%;
+    width: 20%;
     height: 100%;
     display: flex;
     flex-direction: column;
@@ -601,6 +605,10 @@ main {
     .btnDiv {
         margin: 0.5rem 0;
     }
+    #basketBtn, #submitBtn{
+        font-size: 0.8rem;
+        width: 100px;
+    }
 
     .reviewGraphDiv {
         flex-direction: column;
@@ -633,6 +641,9 @@ main {
     .youtubeInnerDiv{
         width: 100%;
         height: 100%;
+    }
+    .youtubeInnerDiv h1{
+        font-size: 0.8rem;
     }
     .adIframe{
         width: 100%;
